--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,243 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+.container {
+  margin: 5% auto;
+  max-width: 750px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo,
+nav {
+  align-self: center;
+}
+
+nav a {
+  margin: 15px;
+  text-decoration: none;
+  color: gray;
+}
+
+.top-content {
+  display: flex;
+  border-bottom: 1px solid black;
+  padding: 5%;
+  justify-content: space-between;
+}
+
+h1 {
+  font-size: 500%;
+  text-align: center;
+}
+
+.h1-item {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.button {
+  border: 1px solid gray;
+  padding: 10px 20px;
+  font-size: 20px;
+  align-self: center;
+}
+
+.main-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+section {
+  margin: 5%;
+}
+
+.middle-img {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+footer {
+  border-top: 1px solid gray;
+  padding-top: 5%;
+}
+
+address {
+  border-bottom: 1px solid gray;
+  padding-bottom: 5%;
+}
+
+small {
+  margin: 25%;
+  width: 50%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.info {
+	background-color: 	#F3F3F3;
+	border: 1px solid black;
+	padding: 5%;
+}
+
+p {
+	  margin: 20px 0;
+  }
 
 
