--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,8 @@ nav a {
 
 .top-content {
   display: flex;
+  width: 90%;
+  margin: 0 auto;
   border-bottom: 1px solid black;
   padding: 5%;
   justify-content: space-between;
@@ -189,6 +191,7 @@ h1 {
   align-self: center;
   display: flex;
   flex-direction: column;
+  margin-left: 0px;
 }
 
 .button {
@@ -217,11 +220,13 @@ section {
 footer {
   border-top: 1px solid gray;
   padding-top: 5%;
+  margin-left: 5%;
 }
 
 address {
   border-bottom: 1px solid gray;
   padding-bottom: 5%;
+  
 }
 
 small {
