--- a/css/index.css
+++ b/css/index.css
@@ -159,6 +159,7 @@ h5 {
 header {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .logo,
@@ -168,7 +169,7 @@ nav {
 }
 
 nav a {
-  margin: 15px;
+  margin: 0 15px;;
   text-decoration: none;
   color: gray;
 }
@@ -247,7 +248,7 @@ p {
 }
 
 /* tablet view */
-@media (max-width: 1024px) {
+@media (max-width: 800px) {
   header {
     flex-direction: column-reverse;
     align-items: center;
@@ -259,7 +260,7 @@ p {
   }
 
   nav a {
-    margin: 0 25px;
+    margin: 0 15px;
   }
 
   img.header-image {
@@ -272,7 +273,7 @@ p {
 }
 
 /* mobile view */
-@media (max-width: 667px) {
+@media (max-width: 500px) {
   header nav {
     display: flex;
     flex-direction: column;
