--- a/css/index.css
+++ b/css/index.css
@@ -250,9 +250,15 @@ p {
 /* tablet view */
 @media (max-width: 800px) {
   header {
+      width: 100%;
     flex-direction: column-reverse;
     align-items: center;
-    /* margin-bottom: 2% 0; */
+    margin-bottom: 2% 0;
+  }
+
+  header nav {
+      display: flex;
+      width: 100;
   }
 
   .logo {
@@ -275,19 +281,20 @@ p {
 /* mobile view */
 @media (max-width: 500px) {
   header nav {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
   nav a {
-    border-top: 1px solid black;
-
-    padding: 10% 100%;
+    /* width: 100%; */
+    border-top: 1px solid gray;
+    padding: 4% 30%;
   }
 
   nav a:last-child {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid gray;
   }
 
   .main-content {
